--- a/style.css
+++ b/style.css
@@ -72,10 +72,11 @@ div.img img{
     place-items: center;
 }
 .modal-content img{
-    height: 20rem;
-    width: 40rem;
+    height: 25rem;
+    width: 50rem;
     object-fit: cover;
 }
+
 .prev-btn{
     position:relative;
     left: 0;
@@ -95,8 +96,9 @@ div.img img{
 .slide-imgs{
     position:absolute;
     bottom:0;
-    height: 5rem;
+    height: 8rem;
     width: 100%;
+    text-align: center;
     
 }
 
@@ -108,6 +110,13 @@ div.img img{
 }
 
 .slide-imgs img{
+    height: 4rem;
+    width: 8rem;
+    margin: 1rem;
+}
+
+.slide-imgs img.selected{
     height: 5rem;
     width: 10rem;
+    transition: 1s;
 }
